@@ -1,9 +1,10 @@
 # configurable section
 TARGETS =
-MLLIBS = parsifal_pgp
-LIBNAME = parsifal_pgp
+MLLIBS = parsifal_crypto
+LIBNAME = parsifal_crypto
 
-parsifal_pgp_SRCS := libpgp.ml
+parsifal_crypto_SRCS := dHKey.ml dSAKey.ml x509Basics.ml x509Extensions.ml cryptoUtil.ml \
+              	        randomEngine.ml pkcs1.ml x509.ml pkcs7.ml
 
 # comment this line if not using camlp4
 USE_CAMLP4 = yes
@@ -12,7 +13,7 @@ CC = gcc
 
 # use the following lines to guess .cmxa files from libs names.
 # remember, libs are always lowercase
-OCAML_LIBS = unix str cryptokit parsifal_syntax parsifal_core parsifal_crypto
+OCAML_LIBS = unix lwt lwt.unix str cryptokit parsifal_syntax parsifal_core
 
 # use the following variables to add extra flags (not guessed by ocamlfind)
 EXTRA_OCAMLOPT_CC_FLAGS = -package parsifal_syntax
