@@ -1,9 +1,7 @@
 # configurable section
-TARGETS =
-MLLIBS = parsifal_pgp
-LIBNAME = parsifal_pgp
+TARGETS = test_random
 
-parsifal_pgp_SRCS := libpgp.ml
+test_random_SRCS := test_random.ml
 
 # comment this line if not using camlp4
 USE_CAMLP4 = yes
@@ -12,7 +10,7 @@ CC = gcc
 
 # use the following lines to guess .cmxa files from libs names.
 # remember, libs are always lowercase
-OCAML_LIBS = unix str cryptokit parsifal_syntax parsifal_core parsifal_crypto
+OCAML_LIBS = unix lwt lwt.unix str cryptokit parsifal_syntax parsifal_core parsifal_crypto
 
 # use the following variables to add extra flags (not guessed by ocamlfind)
 EXTRA_OCAMLOPT_CC_FLAGS = -package parsifal_syntax
@@ -23,4 +21,9 @@ EXTRA_OCAMLC_LD_FLAGS =
 BUILD_DIR = build
 
 
-include ../Makefile.ocaml
+
+include ../../Makefile.ocaml
+
+
+check: all
+	./test_random
