@@ -3,9 +3,7 @@ TARGETS =
 MLLIBS = parsifal_ssl
 LIBNAME = parsifal_ssl
 
-parsifal_ssl_SRCS := dHKey.ml dSAKey.ml x509Basics.ml x509Extensions.ml cryptoUtil.ml \
-                     randomEngine.ml pkcs1.ml x509.ml answerDump.ml \
-                     tlsEnums.ml tls.ml ssl2.ml tlsCrypto.ml tlsDatabase.ml tlsEngineNG.ml
+parsifal_ssl_SRCS := answerDump.ml tlsEnums.ml tls.ml ssl2.ml tlsCrypto.ml tlsDatabase.ml tlsEngineNG.ml
 
 # comment this line if not using camlp4
 USE_CAMLP4 = yes
@@ -14,7 +12,7 @@ CC = gcc
 
 # use the following lines to guess .cmxa files from libs names.
 # remember, libs are always lowercase
-OCAML_LIBS = unix lwt lwt.unix str cryptokit parsifal_syntax parsifal_core parsifal_net
+OCAML_LIBS = unix lwt lwt.unix str cryptokit parsifal_syntax parsifal_core parsifal_crypto parsifal_net
 
 # use the following variables to add extra flags (not guessed by ocamlfind)
 EXTRA_OCAMLOPT_CC_FLAGS = -package parsifal_syntax
