@@ -1,3 +1,8 @@
+2014-02-25 Olivier Levillain <olivier.levillain@ssi.gouv.fr>
+	* Major rewrite of TLS engine (using automata)
+	* Remove several programs to limit the number of targets
+	* New library: crypto, to factor some code
+
 2014-02-17 Olivier Levillain <olivier.levillain@ssi.gouv.fr>
 	* First implementation of gzip_container
 	* New PTypes: (rtol_)bit_magic
